force-app/main/default/objects/Sym_Soldcase__c/fields/Sym_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Sym_Broker_Email__c</fullName>
    <description>This will be used to send emails to the broker on soldcase updates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Email</label>
    <type>Email</type>
</CustomField>