force-app/main/default/objects/Sym_Soldcase__c/fields/Sym_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Broker_Name__c</fullName>
    <description>This is the name of the broker when the record is created, it is not the signature fields.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>