force-app/main/default/objects/Sym_Soldcase__c/fields/Sym_Quote__c.field-meta.xml
<CustomField>
    <fullName>Sym_Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Soldcases</relationshipLabel>
    <relationshipName>Soldcases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>