force-app/main/default/objects/Sym_Soldcase__c/fields/Sym_Signed_Broker_Date__c.field-meta.xml
<CustomField>
    <fullName>Sym_Signed_Broker_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Broker Date</label>
    <type>Date</type>
</CustomField>