force-app/main/default/objects/Sym_Soldcase__c/fields/Sym_Signed_Broker_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Sym_Signed_Broker_FirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Broker FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>