force-app/main/default/objects/Sym_Soldcase__c/fields/Sym_Signed_Employer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Signed_Employer_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Employer First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>